--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>Studio</li>
           <li>Portfolio</li>
@@ -87,11 +87,9 @@
               width="264"
               height="260"
             />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
-          <li><h3>Mark Guerrero</h3></li>
-          <li><p>Product Designer</p></li>
-        </ul>
-        <ul>
           <li>
             <img
               src="/images/img_2.jpg"
@@ -99,11 +97,9 @@
               width="264"
               height="260"
             />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
-          <li><h3>Tom Ford</h3></li>
-          <li><p>Frontend Developer</p></li>
-        </ul>
-        <ul>
           <li>
             <img
               src="/images/img_3.jpg"
@@ -111,11 +107,9 @@
               width="264"
               height="260"
             />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
-          <li><h3>Camila Garcia</h3></li>
-          <li><p>Marketing</p></li>
-        </ul>
-        <ul>
           <li>
             <img
               src="/images/img_4.jpg"
@@ -123,9 +117,9 @@
               width="264"
               height="260"
             />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
-          <li><h3>Daniel Wilson</h3></li>
-          <li><p>UI Designer</p></li>
         </ul>
       </section>
     </main>
