--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
           <li>Studio</li>
           <li>Portfolio</li>
           <li>Contacts</li>
+          <li>
+            <address>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </address>
+          </li>
         </ul>
-        <address>
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-          </ul>
-        </address>
       </nav>
     </header>
 
@@ -82,7 +82,7 @@
         <ul>
           <li>
             <img
-              src="/images/img_1.jpg"
+              src="./images/img_1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -92,7 +92,7 @@
           </li>
           <li>
             <img
-              src="/images/img_2.jpg"
+              src="./images/img_2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -102,7 +102,7 @@
           </li>
           <li>
             <img
-              src="/images/img_3.jpg"
+              src="./images/img_3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -112,7 +112,7 @@
           </li>
           <li>
             <img
-              src="/images/img_4.jpg"
+              src="./images/img_4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
