--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
-          <li>
-            <address>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </address>
-          </li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
@@ -34,41 +34,30 @@
         <ul>
           <li>
             <h3>Strategy</h3>
-          </li>
-          <li>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-        </ul>
-        <ul>
+
           <li>
             <h3>Punctuality</h3>
-          </li>
-          <li>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-        </ul>
-        <ul>
+
           <li>
             <h3>Diligence</h3>
-          </li>
-          <li>
             <p>
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-        </ul>
-        <ul>
+
           <li>
             <h3>Technologies</h3>
-          </li>
-          <li>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
